--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.2.1",
     "react": "^18",
+    "react-date-picker": "^11.0.0",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
     "react-rating-stars-component": "^2.2.0",
