--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-date-picker": "^11.0.0",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
+    "react-images-uploading": "^3.1.7",
     "react-rating-stars-component": "^2.2.0",
     "react-stars": "^2.2.5"
   },
