--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.1.0",
     "react-images-uploading": "^3.1.7",
     "react-rating-stars-component": "^2.2.0",
+    "react-select-search": "^4.1.7",
     "react-stars": "^2.2.5"
   },
   "devDependencies": {
