--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.12.1",
     "next": "14.2.1",
     "react": "^18",
     "react-date-picker": "^11.0.0",
